gac_sb/objects/AppATespaceDocument__c.object
<CustomObject>
    <description>Application AT</description>
    <fields>
        <fullName>Actif__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Actif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categorie__c</fullName>
        <label>Catégorie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Liens utiles</fullName>
                </value>
                <value>
                    <fullName>Actualités</fullName>
                </value>
                <value>
                    <fullName>Nos publications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LienSite__c</fullName>
        <label>Lien du site</label>
        <type>Url</type>
    </fields>
    <label>Espace documents</label>
    <nameField>
        <label>Nom du lien</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Espaces Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>